--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/notesicon"
+        android:icon="@raw/notesicon"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/notesicon"
+        android:roundIcon="@raw/notesicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyNotesApp"
         tools:targetApi="33">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".SignupActivity"
             android:exported="false">
@@ -34,13 +41,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".LoginActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
